Remove Linux GPU Proc AmountOfPhysicalMemory workaround

base::SysInfo::AmountOfPhysicalMemory() doesn't work through the GPU
sandbox on linux. Pre-populate the cached value before sandbox init.

Bug: 743271
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I21505e321beb84af0b03b3ddca2b5c683e403a30